@@ -1,4 +1,5 @@
 AUX 60_mod_autoindex_mb.conf 124 RMD160 6cce179b1c5b2257b86e6645cb4649dab540d05c SHA1 f772c71d1b8db34f863270d5a3b7069e4c432123 SHA256 46b7a0dff6b8a0f9c813164dcf4ccd22d57538381192b0a79490ffcc815557ed
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
 EBUILD mod_autoindex_mb-2.8.ebuild 650 RMD160 3723afd337f013220798013a8b2e3112302213aa SHA1 db5bacff40d7880f78476df1165e7f2fceb29e2e SHA256 9afb8964123b3e41e4e17e400f011fcdd691946a84f375995afa62f53380f8f0
-MISC ChangeLog 222 RMD160 86ef5c2ceb88a9965fc7253c625389596b5a7063 SHA1 f9de54d2cc550d4dba68f3629ef8daa973e42e25 SHA256 3c6941b87e3ed0b6d922ceffcf8a76cb6a8a429e8d1ed4fb2588c49b1696ba5e
+EBUILD mod_autoindex_mb-9999.ebuild 711 RMD160 4e466226de43ab9cb827a829081b277c7e23e701 SHA1 bdd777e8ef6f1117b93a0976e35f5bc17a5eb36a SHA256 b0b1ea0350be108434b26babc489d338d3bb9d43b04ba6c7bcc085b9e0125278
+MISC ChangeLog 371 RMD160 13c10c3cf714039ecebdadc30239af8e13871ae5 SHA1 73825f0f333e6d8c9e3e91e7236db318ee711409 SHA256 9acd6d1fb0a976a367cb366a11f579bd2aed0f5c62cc8642bba6b36556203fb7
